[project]
name = "PDF-Extract-Kit"
version = "0.0.1"
description = "Convert math textbook pages to latex"
requires-python = ">=3.10,<4.0"

dependencies = [
    "setuptools",
    "omegaconf",
    "matplotlib",
    "PyMuPDF",
    "ultralytics>=8.2.85",
    "doclayout-yolo==0.0.2",
    "unimernet==0.2.1",
    "paddlepaddle-gpu",
    "paddleocr==2.7.3",
    "struct-eqtable",
    "lmdeploy",
    "torch == 2.3.1+cu121",
    "torchvision == 0.18.1+cu121",
]

[tool.pdm]

[[tool.pdm.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
include_packages = ["torch", "torchvision"]
exclude_packages = ["*"]

[tool.pdm.dev-dependencies]
dev = [
    "ruff >= 0.7.0",
]


test = [
    "pytest<9.0.0,>=8.3.3",
    "pytest-mock<4.0.0,>=3.14.0"
]


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pyright]
reportCallIssue = "none"
